// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forms: FormInput: [ prop: containerRef ] enzyme-mount: snapshot 1`] = `
<FormInput
  containerRef={[Function]}
  normalizeFontSize={true}
>
  <AnimatedComponent
    style={
      Array [
        140,
        undefined,
        Object {
          "transform": Array [
            Object {
              "translateX": AnimatedInterpolation {
                "_children": Array [
                  AnimatedTransform {
                    "_children": Array [
                      AnimatedStyle {
                        "_children": Array [
                          AnimatedProps {
                            "_callback": [Function],
                            "_props": Object {
                              "children": <TextInput
                                autoCapitalize="sentences"
                                autoComplete="on"
                                autoCorrect={true}
                                editable={true}
                                keyboardType="default"
                                multiline={false}
                                numberOfLines={2}
                                secureTextEntry={false}
                                style={
                                                          Array [
                                                                                    141,
                                                                                    Object {
                                                                                      "fontSize": 14,
                                                                                    },
                                                                                    undefined,
                                                                                  ]
                                }
      />,
                              "style": [Circular],
                            },
                          },
                        ],
                        "_style": Object {
                          "marginLeft": 15,
                          "marginRight": 15,
                          "transform": [Circular],
                        },
                      },
                    ],
                    "_transforms": [Circular],
                  },
                ],
                "_interpolation": [Function],
                "_listeners": Object {},
                "_parent": AnimatedValue {
                  "_animation": null,
                  "_children": Array [
                    [Circular],
                  ],
                  "_listeners": Object {},
                  "_offset": 0,
                  "_value": 0,
                },
              },
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        Object {
          "marginLeft": 15,
          "marginRight": 15,
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <div
        className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginBottom-p1pxzi rn-marginLeft-1ozfoo7 rn-marginRight-y3t9qe rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
        style={
          Object {
            "WebkitTransform": "translateX(0px)",
            "transform": "translateX(0px)",
          }
        }
      >
        <TextInput
          autoCapitalize="sentences"
          autoComplete="on"
          autoCorrect={true}
          editable={true}
          keyboardType="default"
          multiline={false}
          numberOfLines={2}
          secureTextEntry={false}
          style={
            Array [
              141,
              Object {
                "fontSize": 14,
              },
              undefined,
            ]
          }
        >
          <input
            autoCapitalize="sentences"
            autoComplete="on"
            autoCorrect="on"
            className="rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopColor-kqr9px rn-borderRightColor-q0dj5p rn-borderBottomColor-1ah7hsa rn-borderLeftColor-137uh4u rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-font-1lw9tu2 rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-resize-1dz5y72"
            dir="auto"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onSelect={[Function]}
            readOnly={false}
            type="text"
          />
        </TextInput>
      </div>
    </View>
  </AnimatedComponent>
</FormInput>
`;

exports[`Forms: FormInput: [ prop: containerRef ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginBottom-p1pxzi rn-marginLeft-1ozfoo7 rn-marginRight-y3t9qe rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
  style="transform:translateX(0px);-webkit-transform:translateX(0px);"
>
  <input
    autocapitalize="sentences"
    autocomplete="on"
    autocorrect="on"
    class="rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopColor-kqr9px rn-borderRightColor-q0dj5p rn-borderBottomColor-1ah7hsa rn-borderLeftColor-137uh4u rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-font-1lw9tu2 rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-resize-1dz5y72"
    dir="auto"
    type="text"
  />
</div>
`;

exports[`Forms: FormInput: [ prop: containerRef ] enzyme-shallow: snapshot 1`] = `
<AnimatedComponent
  style={
    Array [
      140,
      undefined,
      Object {
        "transform": Array [
          Object {
            "translateX": AnimatedInterpolation {
              "_children": Array [],
              "_interpolation": [Function],
              "_listeners": Object {},
              "_parent": AnimatedValue {
                "_animation": null,
                "_children": Array [],
                "_listeners": Object {},
                "_offset": 0,
                "_value": 0,
              },
            },
          },
        ],
      },
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    secureTextEntry={false}
    style={
      Array [
        141,
        Object {
          "fontSize": 14,
        },
        undefined,
      ]
    }
  />
</AnimatedComponent>
`;

exports[`Forms: FormInput: [ prop: containerStyle ] enzyme-mount: snapshot 1`] = `
<FormInput
  containerStyle={
    Object {
      "backgroundColor": "#071",
    }
  }
  normalizeFontSize={true}
>
  <AnimatedComponent
    style={
      Array [
        140,
        Object {
          "backgroundColor": "#071",
        },
        Object {
          "transform": Array [
            Object {
              "translateX": AnimatedInterpolation {
                "_children": Array [
                  AnimatedTransform {
                    "_children": Array [
                      AnimatedStyle {
                        "_children": Array [
                          AnimatedProps {
                            "_callback": [Function],
                            "_props": Object {
                              "children": <TextInput
                                autoCapitalize="sentences"
                                autoComplete="on"
                                autoCorrect={true}
                                editable={true}
                                keyboardType="default"
                                multiline={false}
                                numberOfLines={2}
                                secureTextEntry={false}
                                style={
                                                          Array [
                                                                                    141,
                                                                                    Object {
                                                                                      "fontSize": 14,
                                                                                    },
                                                                                    undefined,
                                                                                  ]
                                }
      />,
                              "style": [Circular],
                            },
                          },
                        ],
                        "_style": Object {
                          "backgroundColor": "#071",
                          "marginLeft": 15,
                          "marginRight": 15,
                          "transform": [Circular],
                        },
                      },
                    ],
                    "_transforms": [Circular],
                  },
                ],
                "_interpolation": [Function],
                "_listeners": Object {},
                "_parent": AnimatedValue {
                  "_animation": null,
                  "_children": Array [
                    [Circular],
                  ],
                  "_listeners": Object {},
                  "_offset": 0,
                  "_value": 0,
                },
              },
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#071",
          "marginLeft": 15,
          "marginRight": 15,
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <div
        className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginBottom-p1pxzi rn-marginLeft-1ozfoo7 rn-marginRight-y3t9qe rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
        style={
          Object {
            "WebkitTransform": "translateX(0px)",
            "backgroundColor": "rgba(0,119,17,1)",
            "transform": "translateX(0px)",
          }
        }
      >
        <TextInput
          autoCapitalize="sentences"
          autoComplete="on"
          autoCorrect={true}
          editable={true}
          keyboardType="default"
          multiline={false}
          numberOfLines={2}
          secureTextEntry={false}
          style={
            Array [
              141,
              Object {
                "fontSize": 14,
              },
              undefined,
            ]
          }
        >
          <input
            autoCapitalize="sentences"
            autoComplete="on"
            autoCorrect="on"
            className="rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopColor-kqr9px rn-borderRightColor-q0dj5p rn-borderBottomColor-1ah7hsa rn-borderLeftColor-137uh4u rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-font-1lw9tu2 rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-resize-1dz5y72"
            dir="auto"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onSelect={[Function]}
            readOnly={false}
            type="text"
          />
        </TextInput>
      </div>
    </View>
  </AnimatedComponent>
</FormInput>
`;

exports[`Forms: FormInput: [ prop: containerStyle ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginBottom-p1pxzi rn-marginLeft-1ozfoo7 rn-marginRight-y3t9qe rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
  style="background-color:rgba(0,119,17,1);transform:translateX(0px);-webkit-transform:translateX(0px);"
>
  <input
    autocapitalize="sentences"
    autocomplete="on"
    autocorrect="on"
    class="rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopColor-kqr9px rn-borderRightColor-q0dj5p rn-borderBottomColor-1ah7hsa rn-borderLeftColor-137uh4u rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-font-1lw9tu2 rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-resize-1dz5y72"
    dir="auto"
    type="text"
  />
</div>
`;

exports[`Forms: FormInput: [ prop: containerStyle ] enzyme-shallow: snapshot 1`] = `
<AnimatedComponent
  style={
    Array [
      140,
      Object {
        "backgroundColor": "#071",
      },
      Object {
        "transform": Array [
          Object {
            "translateX": AnimatedInterpolation {
              "_children": Array [],
              "_interpolation": [Function],
              "_listeners": Object {},
              "_parent": AnimatedValue {
                "_animation": null,
                "_children": Array [],
                "_listeners": Object {},
                "_offset": 0,
                "_value": 0,
              },
            },
          },
        ],
      },
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    secureTextEntry={false}
    style={
      Array [
        141,
        Object {
          "fontSize": 14,
        },
        undefined,
      ]
    }
  />
</AnimatedComponent>
`;

exports[`Forms: FormInput: [ prop: inputStyle ] enzyme-mount: snapshot 1`] = `
<FormInput
  inputStyle={
    Object {
      "color": "#071",
    }
  }
  normalizeFontSize={true}
>
  <AnimatedComponent
    style={
      Array [
        140,
        undefined,
        Object {
          "transform": Array [
            Object {
              "translateX": AnimatedInterpolation {
                "_children": Array [
                  AnimatedTransform {
                    "_children": Array [
                      AnimatedStyle {
                        "_children": Array [
                          AnimatedProps {
                            "_callback": [Function],
                            "_props": Object {
                              "children": <TextInput
                                autoCapitalize="sentences"
                                autoComplete="on"
                                autoCorrect={true}
                                editable={true}
                                keyboardType="default"
                                multiline={false}
                                numberOfLines={2}
                                secureTextEntry={false}
                                style={
                                                          Array [
                                                                                    141,
                                                                                    Object {
                                                                                      "fontSize": 14,
                                                                                    },
                                                                                    Object {
                                                                                      "color": "#071",
                                                                                    },
                                                                                  ]
                                }
      />,
                              "style": [Circular],
                            },
                          },
                        ],
                        "_style": Object {
                          "marginLeft": 15,
                          "marginRight": 15,
                          "transform": [Circular],
                        },
                      },
                    ],
                    "_transforms": [Circular],
                  },
                ],
                "_interpolation": [Function],
                "_listeners": Object {},
                "_parent": AnimatedValue {
                  "_animation": null,
                  "_children": Array [
                    [Circular],
                  ],
                  "_listeners": Object {},
                  "_offset": 0,
                  "_value": 0,
                },
              },
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        Object {
          "marginLeft": 15,
          "marginRight": 15,
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <div
        className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginBottom-p1pxzi rn-marginLeft-1ozfoo7 rn-marginRight-y3t9qe rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
        style={
          Object {
            "WebkitTransform": "translateX(0px)",
            "transform": "translateX(0px)",
          }
        }
      >
        <TextInput
          autoCapitalize="sentences"
          autoComplete="on"
          autoCorrect={true}
          editable={true}
          keyboardType="default"
          multiline={false}
          numberOfLines={2}
          secureTextEntry={false}
          style={
            Array [
              141,
              Object {
                "fontSize": 14,
              },
              Object {
                "color": "#071",
              },
            ]
          }
        >
          <input
            autoCapitalize="sentences"
            autoComplete="on"
            autoCorrect="on"
            className="rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopColor-kqr9px rn-borderRightColor-q0dj5p rn-borderBottomColor-1ah7hsa rn-borderLeftColor-137uh4u rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-font-1lw9tu2 rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-resize-1dz5y72"
            dir="auto"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onSelect={[Function]}
            readOnly={false}
            style={
              Object {
                "color": "rgba(0,119,17,1)",
              }
            }
            type="text"
          />
        </TextInput>
      </div>
    </View>
  </AnimatedComponent>
</FormInput>
`;

exports[`Forms: FormInput: [ prop: inputStyle ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginBottom-p1pxzi rn-marginLeft-1ozfoo7 rn-marginRight-y3t9qe rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
  style="transform:translateX(0px);-webkit-transform:translateX(0px);"
>
  <input
    autocapitalize="sentences"
    autocomplete="on"
    autocorrect="on"
    class="rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopColor-kqr9px rn-borderRightColor-q0dj5p rn-borderBottomColor-1ah7hsa rn-borderLeftColor-137uh4u rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-font-1lw9tu2 rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-resize-1dz5y72"
    dir="auto"
    style="color:rgba(0,119,17,1);"
    type="text"
  />
</div>
`;

exports[`Forms: FormInput: [ prop: inputStyle ] enzyme-shallow: snapshot 1`] = `
<AnimatedComponent
  style={
    Array [
      140,
      undefined,
      Object {
        "transform": Array [
          Object {
            "translateX": AnimatedInterpolation {
              "_children": Array [],
              "_interpolation": [Function],
              "_listeners": Object {},
              "_parent": AnimatedValue {
                "_animation": null,
                "_children": Array [],
                "_listeners": Object {},
                "_offset": 0,
                "_value": 0,
              },
            },
          },
        ],
      },
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    secureTextEntry={false}
    style={
      Array [
        141,
        Object {
          "fontSize": 14,
        },
        Object {
          "color": "#071",
        },
      ]
    }
  />
</AnimatedComponent>
`;

exports[`Forms: FormInput: [ prop: no props ] enzyme-mount: snapshot 1`] = `
<FormInput
  normalizeFontSize={true}
>
  <AnimatedComponent
    style={
      Array [
        140,
        undefined,
        Object {
          "transform": Array [
            Object {
              "translateX": AnimatedInterpolation {
                "_children": Array [
                  AnimatedTransform {
                    "_children": Array [
                      AnimatedStyle {
                        "_children": Array [
                          AnimatedProps {
                            "_callback": [Function],
                            "_props": Object {
                              "children": <TextInput
                                autoCapitalize="sentences"
                                autoComplete="on"
                                autoCorrect={true}
                                editable={true}
                                keyboardType="default"
                                multiline={false}
                                numberOfLines={2}
                                secureTextEntry={false}
                                style={
                                                          Array [
                                                                                    141,
                                                                                    Object {
                                                                                      "fontSize": 14,
                                                                                    },
                                                                                    undefined,
                                                                                  ]
                                }
      />,
                              "style": [Circular],
                            },
                          },
                        ],
                        "_style": Object {
                          "marginLeft": 15,
                          "marginRight": 15,
                          "transform": [Circular],
                        },
                      },
                    ],
                    "_transforms": [Circular],
                  },
                ],
                "_interpolation": [Function],
                "_listeners": Object {},
                "_parent": AnimatedValue {
                  "_animation": null,
                  "_children": Array [
                    [Circular],
                  ],
                  "_listeners": Object {},
                  "_offset": 0,
                  "_value": 0,
                },
              },
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        Object {
          "marginLeft": 15,
          "marginRight": 15,
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <div
        className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginBottom-p1pxzi rn-marginLeft-1ozfoo7 rn-marginRight-y3t9qe rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
        style={
          Object {
            "WebkitTransform": "translateX(0px)",
            "transform": "translateX(0px)",
          }
        }
      >
        <TextInput
          autoCapitalize="sentences"
          autoComplete="on"
          autoCorrect={true}
          editable={true}
          keyboardType="default"
          multiline={false}
          numberOfLines={2}
          secureTextEntry={false}
          style={
            Array [
              141,
              Object {
                "fontSize": 14,
              },
              undefined,
            ]
          }
        >
          <input
            autoCapitalize="sentences"
            autoComplete="on"
            autoCorrect="on"
            className="rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopColor-kqr9px rn-borderRightColor-q0dj5p rn-borderBottomColor-1ah7hsa rn-borderLeftColor-137uh4u rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-font-1lw9tu2 rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-resize-1dz5y72"
            dir="auto"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onSelect={[Function]}
            readOnly={false}
            type="text"
          />
        </TextInput>
      </div>
    </View>
  </AnimatedComponent>
</FormInput>
`;

exports[`Forms: FormInput: [ prop: no props ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginBottom-p1pxzi rn-marginLeft-1ozfoo7 rn-marginRight-y3t9qe rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
  style="transform:translateX(0px);-webkit-transform:translateX(0px);"
>
  <input
    autocapitalize="sentences"
    autocomplete="on"
    autocorrect="on"
    class="rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopColor-kqr9px rn-borderRightColor-q0dj5p rn-borderBottomColor-1ah7hsa rn-borderLeftColor-137uh4u rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-font-1lw9tu2 rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-resize-1dz5y72"
    dir="auto"
    type="text"
  />
</div>
`;

exports[`Forms: FormInput: [ prop: no props ] enzyme-shallow: snapshot 1`] = `
<AnimatedComponent
  style={
    Array [
      140,
      undefined,
      Object {
        "transform": Array [
          Object {
            "translateX": AnimatedInterpolation {
              "_children": Array [],
              "_interpolation": [Function],
              "_listeners": Object {},
              "_parent": AnimatedValue {
                "_animation": null,
                "_children": Array [],
                "_listeners": Object {},
                "_offset": 0,
                "_value": 0,
              },
            },
          },
        ],
      },
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    secureTextEntry={false}
    style={
      Array [
        141,
        Object {
          "fontSize": 14,
        },
        undefined,
      ]
    }
  />
</AnimatedComponent>
`;

exports[`Forms: FormInput: [ prop: shake ] enzyme-shallow: snapshot 1`] = `
<AnimatedComponent
  style={
    Array [
      140,
      undefined,
      Object {
        "transform": Array [
          Object {
            "translateX": AnimatedInterpolation {
              "_children": Array [],
              "_interpolation": [Function],
              "_listeners": Object {},
              "_parent": AnimatedValue {
                "_animation": TimingAnimation {
                  "__active": true,
                  "__isInteraction": true,
                  "__onEnd": [Function],
                  "_animationFrame": 2,
                  "_delay": 0,
                  "_duration": 375,
                  "_easing": [Function],
                  "_fromValue": 0,
                  "_onUpdate": [Function],
                  "_startTime": -3580994563,
                  "_toValue": 3,
                },
                "_children": Array [],
                "_listeners": Object {},
                "_offset": 0,
                "_tracking": null,
                "_value": 0,
              },
            },
          },
        ],
      },
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    secureTextEntry={false}
    style={
      Array [
        141,
        Object {
          "fontSize": 14,
        },
        undefined,
      ]
    }
  />
</AnimatedComponent>
`;

exports[`Forms: FormInput: [ prop: textInputRef ] enzyme-mount: snapshot 1`] = `
<FormInput
  normalizeFontSize={true}
  textInputRef={[Function]}
>
  <AnimatedComponent
    style={
      Array [
        140,
        undefined,
        Object {
          "transform": Array [
            Object {
              "translateX": AnimatedInterpolation {
                "_children": Array [
                  AnimatedTransform {
                    "_children": Array [
                      AnimatedStyle {
                        "_children": Array [
                          AnimatedProps {
                            "_callback": [Function],
                            "_props": Object {
                              "children": <TextInput
                                autoCapitalize="sentences"
                                autoComplete="on"
                                autoCorrect={true}
                                editable={true}
                                keyboardType="default"
                                multiline={false}
                                numberOfLines={2}
                                secureTextEntry={false}
                                style={
                                                          Array [
                                                                                    141,
                                                                                    Object {
                                                                                      "fontSize": 14,
                                                                                    },
                                                                                    undefined,
                                                                                  ]
                                }
      />,
                              "style": [Circular],
                            },
                          },
                        ],
                        "_style": Object {
                          "marginLeft": 15,
                          "marginRight": 15,
                          "transform": [Circular],
                        },
                      },
                    ],
                    "_transforms": [Circular],
                  },
                ],
                "_interpolation": [Function],
                "_listeners": Object {},
                "_parent": AnimatedValue {
                  "_animation": null,
                  "_children": Array [
                    [Circular],
                  ],
                  "_listeners": Object {},
                  "_offset": 0,
                  "_value": 0,
                },
              },
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        Object {
          "marginLeft": 15,
          "marginRight": 15,
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <div
        className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginBottom-p1pxzi rn-marginLeft-1ozfoo7 rn-marginRight-y3t9qe rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
        style={
          Object {
            "WebkitTransform": "translateX(0px)",
            "transform": "translateX(0px)",
          }
        }
      >
        <TextInput
          autoCapitalize="sentences"
          autoComplete="on"
          autoCorrect={true}
          editable={true}
          keyboardType="default"
          multiline={false}
          numberOfLines={2}
          secureTextEntry={false}
          style={
            Array [
              141,
              Object {
                "fontSize": 14,
              },
              undefined,
            ]
          }
        >
          <input
            autoCapitalize="sentences"
            autoComplete="on"
            autoCorrect="on"
            className="rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopColor-kqr9px rn-borderRightColor-q0dj5p rn-borderBottomColor-1ah7hsa rn-borderLeftColor-137uh4u rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-font-1lw9tu2 rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-resize-1dz5y72"
            dir="auto"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onSelect={[Function]}
            readOnly={false}
            type="text"
          />
        </TextInput>
      </div>
    </View>
  </AnimatedComponent>
</FormInput>
`;

exports[`Forms: FormInput: [ prop: textInputRef ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginBottom-p1pxzi rn-marginLeft-1ozfoo7 rn-marginRight-y3t9qe rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
  style="transform:translateX(0px);-webkit-transform:translateX(0px);"
>
  <input
    autocapitalize="sentences"
    autocomplete="on"
    autocorrect="on"
    class="rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopColor-kqr9px rn-borderRightColor-q0dj5p rn-borderBottomColor-1ah7hsa rn-borderLeftColor-137uh4u rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-font-1lw9tu2 rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-resize-1dz5y72"
    dir="auto"
    type="text"
  />
</div>
`;

exports[`Forms: FormInput: [ prop: textInputRef ] enzyme-shallow: snapshot 1`] = `
<AnimatedComponent
  style={
    Array [
      140,
      undefined,
      Object {
        "transform": Array [
          Object {
            "translateX": AnimatedInterpolation {
              "_children": Array [],
              "_interpolation": [Function],
              "_listeners": Object {},
              "_parent": AnimatedValue {
                "_animation": null,
                "_children": Array [],
                "_listeners": Object {},
                "_offset": 0,
                "_value": 0,
              },
            },
          },
        ],
      },
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    secureTextEntry={false}
    style={
      Array [
        141,
        Object {
          "fontSize": 14,
        },
        undefined,
      ]
    }
  />
</AnimatedComponent>
`;

exports[`Forms: FormLabel: [ prop: containerStyle ] enzyme-mount: snapshot 1`] = `
<FormLabel
  containerStyle={
    Object {
      "backgroundColor": "#2ff",
      "padding": 5,
    }
  }
>
  <View
    style={
      Array [
        142,
        Object {
          "backgroundColor": "#2ff",
          "padding": 5,
        },
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingBottom-1inuy60 rn-position-bnwqim"
      style={
        Object {
          "backgroundColor": "rgba(34,255,255,1)",
          "paddingLeft": "5px",
          "paddingRight": "5px",
          "paddingTop": "5px",
        }
      }
    >
      <TextElement
        style={
          Array [
            143,
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              64,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                143,
                undefined,
                undefined,
              ],
            ]
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
          >
            enter something
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormLabel>
`;

exports[`Forms: FormLabel: [ prop: containerStyle ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingBottom-1inuy60 rn-position-bnwqim"
  style="background-color:rgba(34,255,255,1);padding-top:5px;padding-right:5px;padding-left:5px;"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
  >
    enter something
  </div>
</div>
`;

exports[`Forms: FormLabel: [ prop: containerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      142,
      Object {
        "backgroundColor": "#2ff",
        "padding": 5,
      },
    ]
  }
>
  <TextElement
    style={
      Array [
        143,
        undefined,
        undefined,
      ]
    }
  >
    enter something
  </TextElement>
</View>
`;

exports[`Forms: FormLabel: [ prop: fontFamily ] enzyme-mount: snapshot 1`] = `
<FormLabel
  fontFamily="Courier New"
>
  <View
    style={
      Array [
        142,
        undefined,
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
    >
      <TextElement
        style={
          Array [
            143,
            undefined,
            Object {
              "fontFamily": "Courier New",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              64,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                143,
                undefined,
                Object {
                  "fontFamily": "Courier New",
                },
              ],
            ]
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
            style={
              Object {
                "fontFamily": "Courier New",
              }
            }
          >
            enter something
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormLabel>
`;

exports[`Forms: FormLabel: [ prop: fontFamily ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
    style="font-family:Courier New;"
  >
    enter something
  </div>
</div>
`;

exports[`Forms: FormLabel: [ prop: fontFamily ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      142,
      undefined,
    ]
  }
>
  <TextElement
    style={
      Array [
        143,
        undefined,
        Object {
          "fontFamily": "Courier New",
        },
      ]
    }
  >
    enter something
  </TextElement>
</View>
`;

exports[`Forms: FormLabel: [ prop: labelStyle ] enzyme-mount: snapshot 1`] = `
<FormLabel
  labelStyle={
    Object {
      "backgroundColor": "#2ff",
      "padding": 5,
    }
  }
>
  <View
    style={
      Array [
        142,
        undefined,
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
    >
      <TextElement
        style={
          Array [
            143,
            Object {
              "backgroundColor": "#2ff",
              "padding": 5,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              64,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                143,
                Object {
                  "backgroundColor": "#2ff",
                  "padding": 5,
                },
                undefined,
              ],
            ]
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-paddingBottom-1inuy60 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
            style={
              Object {
                "backgroundColor": "rgba(34,255,255,1)",
                "paddingLeft": "5px",
                "paddingRight": "5px",
                "paddingTop": "5px",
              }
            }
          >
            enter something
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormLabel>
`;

exports[`Forms: FormLabel: [ prop: labelStyle ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-paddingBottom-1inuy60 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
    style="background-color:rgba(34,255,255,1);padding-top:5px;padding-right:5px;padding-left:5px;"
  >
    enter something
  </div>
</div>
`;

exports[`Forms: FormLabel: [ prop: labelStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      142,
      undefined,
    ]
  }
>
  <TextElement
    style={
      Array [
        143,
        Object {
          "backgroundColor": "#2ff",
          "padding": 5,
        },
        undefined,
      ]
    }
  >
    enter something
  </TextElement>
</View>
`;

exports[`Forms: FormValidationMessage: [ prop: containerStyle ] enzyme-mount: snapshot 1`] = `
<FormValidationMessage
  containerStyle={
    Object {
      "backgroundColor": "#2ff",
      "padding": 5,
    }
  }
>
  <View
    style={
      Array [
        144,
        Object {
          "backgroundColor": "#2ff",
          "padding": 5,
        },
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingBottom-1inuy60 rn-position-bnwqim"
      style={
        Object {
          "backgroundColor": "rgba(34,255,255,1)",
          "paddingLeft": "5px",
          "paddingRight": "5px",
          "paddingTop": "5px",
        }
      }
    >
      <TextElement
        style={
          Array [
            145,
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              64,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                145,
                undefined,
                undefined,
              ],
            ]
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
          >
            bad things
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormValidationMessage>
`;

exports[`Forms: FormValidationMessage: [ prop: containerStyle ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingBottom-1inuy60 rn-position-bnwqim"
  style="background-color:rgba(34,255,255,1);padding-top:5px;padding-right:5px;padding-left:5px;"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
  >
    bad things
  </div>
</div>
`;

exports[`Forms: FormValidationMessage: [ prop: containerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      144,
      Object {
        "backgroundColor": "#2ff",
        "padding": 5,
      },
    ]
  }
>
  <TextElement
    style={
      Array [
        145,
        undefined,
        undefined,
      ]
    }
  >
    bad things
  </TextElement>
</View>
`;

exports[`Forms: FormValidationMessage: [ prop: fontFamily ] enzyme-mount: snapshot 1`] = `
<FormValidationMessage
  fontFamily="Courier New"
>
  <View
    style={
      Array [
        144,
        undefined,
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
    >
      <TextElement
        style={
          Array [
            145,
            undefined,
            Object {
              "fontFamily": "Courier New",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              64,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                145,
                undefined,
                Object {
                  "fontFamily": "Courier New",
                },
              ],
            ]
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
            style={
              Object {
                "fontFamily": "Courier New",
              }
            }
          >
            bad things
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormValidationMessage>
`;

exports[`Forms: FormValidationMessage: [ prop: fontFamily ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
    style="font-family:Courier New;"
  >
    bad things
  </div>
</div>
`;

exports[`Forms: FormValidationMessage: [ prop: fontFamily ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      144,
      undefined,
    ]
  }
>
  <TextElement
    style={
      Array [
        145,
        undefined,
        Object {
          "fontFamily": "Courier New",
        },
      ]
    }
  >
    bad things
  </TextElement>
</View>
`;

exports[`Forms: FormValidationMessage: [ prop: labelStyle ] enzyme-mount: snapshot 1`] = `
<FormValidationMessage
  labelStyle={
    Object {
      "backgroundColor": "#2ff",
      "padding": 5,
    }
  }
>
  <View
    style={
      Array [
        144,
        undefined,
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
    >
      <TextElement
        style={
          Array [
            145,
            Object {
              "backgroundColor": "#2ff",
              "padding": 5,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              64,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                145,
                Object {
                  "backgroundColor": "#2ff",
                  "padding": 5,
                },
                undefined,
              ],
            ]
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingBottom-1inuy60 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
            style={
              Object {
                "backgroundColor": "rgba(34,255,255,1)",
                "paddingLeft": "5px",
                "paddingRight": "5px",
                "paddingTop": "5px",
              }
            }
          >
            bad things
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormValidationMessage>
`;

exports[`Forms: FormValidationMessage: [ prop: labelStyle ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingBottom-1inuy60 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
    style="background-color:rgba(34,255,255,1);padding-top:5px;padding-right:5px;padding-left:5px;"
  >
    bad things
  </div>
</div>
`;

exports[`Forms: FormValidationMessage: [ prop: labelStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      144,
      undefined,
    ]
  }
>
  <TextElement
    style={
      Array [
        145,
        Object {
          "backgroundColor": "#2ff",
          "padding": 5,
        },
        undefined,
      ]
    }
  >
    bad things
  </TextElement>
</View>
`;
